hotel details page done

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-access_Key = "EYYdq33yW9cyBmVzjAYU09n0OESJN2VlQRa1H40bHGc"
+access_Key = EYYdq33yW9cyBmVzjAYU09n0OESJN2VlQRa1H40bHGc
+CONNECTION_STRING= mongodb+srv://kuldeeppatel23:F1zDRSOkYl3T0BIJ@cluster0.0c2ried.mongodb.net/hotel_database
